<resources>
    <string name="app_name">SCSE FOC 2018</string>

    <!-- Menu Strings -->
    <string name="Updates">Updates</string>
    <string name="Add_Updates">Add Updates</string>
    <string name="View_Score">Analyse</string>
    <string name="Add_Score">New Listing</string>
    <string name="Account">Account</string>
    <string name="Chat">Chats</string>
    <string name="TrReport">Tr Report</string>
    <string name="AccidentReport">Accident Report</string>
    <string name="Logout">Logout</string>

    <!-- Button Strings -->
    <string name="navigate">Navigate</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="submit">Submit</string>
    <string name="confirm">Confirm</string>
    <string name="_import">Import</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <!-- Title Strings -->
    <string name="titlebar_news">News</string>
    <string name="analyse_category">Analyse Category</string>
    <string name="analyse_options">Analyse Options</string>
    <string name="year">Year</string>
    <string name="age_group">Age Group</string>
    <string name="gender">Gender</string>
    <string name="popular_times">Popular Times</string>
    <string name="listings">Listings</string>
    <string name="contacts">Contacts</string>

    <!-- Radio Button Strings -->
    <string name="female">Female</string>
    <string name="male">Male</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to alert dialog -->
    <string name="delete_message">All data will be erased upon deletion. Are you sure you want to delete this account?</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_old_password">Old Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="prompt_confirm_new_password">Confirm New Password</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_register_password">Password</string>
    <string name="prompt_register_confirm_password">Confirm Password</string>
    <string name="prompt_mobileNo">Mobile No.</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="text_or">or</string>
    <string name="action_skip">Skip</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Forgot your password?</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="loading">Loading…</string>

    <!-- Change Password error message -->
    <string name="error_password_mismatch">Password does not match</string>
    <string name="error_incorrect_old_password">Your old password was entered incorrectly. Unable to perform change of password.</string>


    <!-- Action TAGs -->
    <string name="LOGIN_TAG">LOGIN_TAG</string>
    <string name="REGISTER_TAG">REGISTER_TAG</string>
    <string name="REGISTERED_TAG">REGISTERED_TAG</string>
    <string name="SKIP_TAG">SKIP_TAG</string>

    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>

    <string name="title_activity_detailed_listing_fragment">DetailedListingFragment</string>
    <string name="title_activity_detailed_listing">detailedListing</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my_listing">MyListing</string>

    <string-array name="OGs">
        <item>apus</item>
        <item>corvus</item>
        <item>leo</item>
        <item>lyra</item>
        <item>orion</item>
        <item>scorpius</item>
    </string-array>

    <string-array name="foc_dates">
        <item>7th August 2018</item>
        <item>8th August 2018</item>
        <item>10th August 2018</item>
        <item>11th August 2018</item>
    </string-array>

    <string-array name="tutorialRooms">
        <item>Select TR</item>
        <item>TR+15</item>>
        <item>TR+16</item>
        <item>TR+17</item>
        <item>TR+18</item>
        <item>TR+19</item>
        <item>TR+20</item>
        <item>TR+21</item>
        <item>TR+22</item>
        <item>TR+23</item>
    </string-array>

    <string-array name="tutorialTimings">
        <item>Select Time</item>
        <item>09:00 - 10:00</item>
        <item>10:00 - 11:00</item>
        <item>11:00 - 12:00</item>
        <item>12:00 - 13:00</item>
        <item>13:00 - 14:00</item>
        <item>14:00 - 15:00</item>
        <item>15:00 - 16:00</item>
        <item>16:00 - 17:00</item>
        <item>17:00 - 18:00</item>
        <item>18:00 - 19:00</item>
    </string-array>

    <string-array name="accidentTypes">
        <item>Select Accident</item>
        <item>Sprain</item>
        <item>Fracture</item>
        <item>Cut</item>
        <item>Bruise</item>
        <item>Period</item>
        <item>Food poisoning</item>
        <item>Insect bite</item>
        <item>Laceration</item>
        <item>Heat exhaustion</item>
        <item>Panic Attack</item>
        <item>Others</item>
    </string-array>
    <string-array name="accidentTypesSelection">
        <item>All</item>
        <item>Sprain</item>
        <item>Fracture</item>
        <item>Cut</item>
        <item>Bruise</item>
        <item>Period</item>
        <item>Food poisoning</item>
        <item>Insect bite</item>
        <item>Laceration</item>
        <item>Heat exhaustion</item>
        <item>Panic Attack</item>
        <item>Others</item>
    </string-array>

    <string-array name="locations">
        <item>TR+15</item>
        <item>TR+16</item>
        <item>TR+17</item>
        <item>TR+18</item>
        <item>TR+19</item>
        <item>TR+20</item>
        <item>TR+21</item>
        <item>TR+22</item>
        <item>TR+23</item>
        <item>Other TR in N4</item>
        <item>Other TR in N2</item>

        <item>LT1A</item>
        <item>LT2A</item>
        <item>LT9</item>
        <item>LT10</item>
        <item>LT19</item>
        <item>LT19A</item>
        <item>Nanyang Auditorium</item>

        <item>SCSE General Office</item>
        <item>SCSE Lounge</item>
        <item>Hardware Lab 1</item>
        <item>Hardware Lab 2</item>
        <item>Hardware Lab 3</item>
        <item>Software Lab 1</item>
        <item>Software Lab 2</item>
        <item>Software Lab 3</item>
        <item>Hardware Project Lab</item>
        <item>Software Project Lab</item>
        <item>N4 Level 1 Outside Level 1 entrance</item>
        <item>N4 Level 2 Outside General Office</item>
        <item>N4-02B-49 SCSE Assoc Chair Academic Office</item>

        <item>One Stop @ SAC</item>
        <item>SAC</item>
        <item>LWN Library</item>
        <item>North Spine Food Court</item>
        <item>Quad</item>

        <item>SRC Main Field</item>
        <item>SRC Pool</item>
        <item>Multipurpose field 1</item>
        <item>Multipurpose field 2</item>
        <item>SRC MPC 1</item>
        <item>SRC MPC 2</item>
        <item>SRC MPC 3</item>
        <item>SRC Grandstand</item>
        <item>Wave Grandstand</item>

        <item>Pavillion of TCT LT</item>
        <item>Harbourfront MRT station</item>
        <item>Carpark F</item>
        <item>Sentosa</item>

    </string-array>
</resources>
