<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <!-- TODO: Update blank fragment layout -->

        <LinearLayout
            android:id="@+id/ll_userprofile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_accent"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="15dp">

            <ImageView
                android:id="@id/ivMenuUserProfilePhoto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@id/tv_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="firstname lastname"
                android:paddingTop="8dp"
                android:textColor="@color/white"
                android:gravity="center"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/divider_color"
                android:paddingBottom="7dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="7dp"
                android:text="@string/contacts"
                android:textColor="@color/color_primary"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="15dp">

                <AutoCompleteTextView
                    android:id="@+id/et_userMobileNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/prompt_mobileNo"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:text="91234567"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="5dp">

                <AutoCompleteTextView
                    android:id="@+id/et_userEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:text="userEmail@gmail.com"
                    android:textSize="15sp"

                    />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="20dp"
                android:padding="17dp"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textAllCaps="false"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/divider_color"
                android:paddingBottom="5dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="7dp"
                android:text="@string/account"
                android:textColor="@color/color_primary"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_changePassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:background="@color/off_white"
                style="?android:textAppearanceSmall"
                android:text="@string/change_password"
                android:textAllCaps="false"
                />

            <Button
                android:id="@+id/btn_deleteAccount"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@color/button_red"
                style="?android:textAppearanceSmall"
                android:text="@string/delete_account"
                android:textAllCaps="false"
                android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>